--- a/results/PlotGamma.ipynb
+++ b/results/PlotGamma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -11,8 +11,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "filename=[\"LW3D12.dat\",\"LW3D16.dat\",\"LW3D20.dat\",\"LW3D24.dat\",\"LW3D28.dat\"]\n",
-    "L=[12,16,20,24,28]\n",
+    "filename=[\"LW3D12.dat\",\"LW3D16.dat\",\"LW3D20.dat\",\"LW3D21.dat\",\"LW3D25.dat\"]\n",
+    "L=[12,16,20,25]\n",
     "\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\".dat\",unpack=True)\n",
@@ -27,7 +27,8 @@
     "plt.xlabel(\"beta\")\n",
     "plt.ylabel(\"gamma\")\n",
     "\n",
-    "plt.legend(loc=\"upper right\")\n",
+    "plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper left\")\n",
     "plt.savefig(\"Gamma3d.pdf\")\n",
     "plt.show()\n"
    ]
