--- a/results/PlotGamma.ipynb
+++ b/results/PlotGamma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "filename=[\"LW3D12.dat\",\"LW3D16.dat\",\"LW3D20.dat\",\"LW3D21.dat\",\"LW3D25.dat\"]\n",
-    "L=[12,16,20,25]\n",
+    "L=[12,13]\n",
     "\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\".dat\",unpack=True)\n",
@@ -29,7 +29,7 @@
     "\n",
     "plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "plt.savefig(\"Gamma3d.pdf\")\n",
+    "#plt.savefig(\"Gamma3d.pdf\")\n",
     "plt.show()\n"
    ]
   }
