--- a/results/PlotGamma.ipynb
+++ b/results/PlotGamma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -12,16 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "filename=[\"LW3D12.dat\",\"LW3D16.dat\",\"LW3D20.dat\",\"LW3D21.dat\",\"LW3D25.dat\"]\n",
-    "L=[12]\n",
+    "L=[12,16]\n",
     "\n",
-    "for l in L:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "\n",
-    "Lver=[12,13]\n",
+    "Lver=[12,16]\n",
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "    plt.errorbar(beta,gamma,gamma_err,label=\"spherical L = \"+str(l))\n",
     "    \n",
     "plt.axvline(0.76141)\n",
     "plt.axvline(0.76141/2)\n",
@@ -34,7 +31,7 @@
     "\n",
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "#plt.savefig(\"Gamma3d.pdf\")\n",
+    "plt.savefig(\"Gamma3d.pdf\")\n",
     "plt.show()\n"
    ]
   }
