Mut info biparts

--- a/results/PlotGamma.ipynb
+++ b/results/PlotGamma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
     "Lver=[12,16]\n",
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,label=\"spherical L = \"+str(l))\n",
+    "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "    \n",
     "plt.axvline(0.76141)\n",
     "plt.axvline(0.76141/2)\n",
