integration of updater class

--- a/results/PlotGamma.ipynb
+++ b/results/PlotGamma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -11,17 +11,19 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "filename=[\"LW3D12.dat\",\"LW3D16.dat\",\"LW3D20.dat\",\"LW3D21.dat\",\"LW3D25.dat\"]\n",
-    "L=[12,16]\n",
-    "\n",
     "\n",
     "Lver=[12,16]\n",
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "        \n",
+    "L=[12]\n",
+    "for l in L:\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"MI3D\"+str(l)+\"ver.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma/(2*l**2),gamma_err,label=\"L = \"+str(l))\n",
     "    \n",
-    "plt.axvline(0.76141)\n",
-    "plt.axvline(0.76141/2)\n",
+    "#plt.axvline(0.76141)\n",
+    "#plt.axvline(0.76141/2)\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
