--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "\n",
+    "rcParams['text.usetex']     = True\n",
     "\n",
     "L=[12,16]\n",
     "\n",
@@ -20,8 +23,8 @@
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
     "\n",
-    "plt.xlabel(\"beta\")\n",
-    "plt.ylabel(\"gamma\")\n",
+    "plt.ylabel(r\"MI / $(2L^2)$\")\n",
+    "plt.xlabel(r\"$\\beta$\")\n",
     "\n",
     "plt.ylim(0.0,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
@@ -31,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
