coding deconfined update

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mutual Information"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
@@ -33,8 +40,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gamma"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -43,14 +57,25 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
-    "\n",
     "rcParams['text.usetex']     = True\n",
     "\n",
-    "Lver=[12,16,20]\n",
+    "def numerical_der(x, y, n=2):\n",
+    "    l=len(x)\n",
+    "    ders = np.zeros(l)\n",
+    "    xmean = 1./(2*n+1) * np.array([sum(x[i-n:i+n+1]) for i in range(n,l-n)])\n",
+    "    ymean = 1./(2*n+1) * np.array([sum(y[i-n:i+n+1]) for i in range(n,l-n)])\n",
+    "\n",
+    "    for i,xm,ym in zip(range(n, l-n),xmean,ymean):\n",
+    "        ders[i] = np.dot((x[i-n:i+n+1]-xm),(y[i-n:i+n+1]-ym)) / sum((x[i-n:i+n+1]-xm)**2)\n",
+    "    \n",
+    "    return ders\n",
+    "    \n",
+    "Lver=[12,13,16,20]\n",
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
-    "    \n",
+    "    plt.plot(beta,numerical_der(beta,gamma,5))\n",
+    "        \n",
     "#plt.axvline(0.76141)\n",
     "#plt.axvline(0.76141/2)\n",
     "\n",
@@ -62,7 +87,7 @@
     "\n",
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "plt.savefig(\"Gamma3d.pdf\")\n",
+    "#plt.savefig(\"Gamma3d.pdf\")\n",
     "plt.show()\n"
    ]
   }
