deconfined updater debugged

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
-    "    plt.plot(beta,numerical_der(beta,gamma,5))\n",
+    "    #plt.plot(beta,numerical_der(beta,gamma,5))\n",
     "        \n",
     "#plt.axvline(0.76141)\n",
     "#plt.axvline(0.76141/2)\n",
