--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -1,37 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "L=[12,16]\n",
-    "\n",
-    "for l in L:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"MI3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma/(2*l**2),gamma_err/(2*l**2),label=\"L = \"+str(l))\n",
-    "    \n",
-    "plt.axhline(0.0,color=\"black\")\n",
-    "plt.axhline(np.log(2),color=\"red\")\n",
-    "\n",
-    "plt.xlabel(\"beta\")\n",
-    "plt.ylabel(\"gamma\")\n",
-    "\n",
-    "plt.ylim(0.0,0.8)\n",
-    "plt.legend(loc=\"upper left\")\n",
-    "plt.savefig(\"MI3d.pdf\")\n",
-    "plt.show()\n"
+    "# Mutual Information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -43,11 +21,61 @@
     "\n",
     "rcParams['text.usetex']     = True\n",
     "\n",
-    "Lver=[12,16,20]\n",
+    "L=[12,16]\n",
+    "\n",
+    "for l in L:\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"MI3D\"+str(l)+\"ver.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma/(2*l**2),gamma_err/(2*l**2),label=\"L = \"+str(l))\n",
+    "    \n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "plt.axhline(np.log(2),color=\"red\")\n",
+    "\n",
+    "plt.ylabel(r\"MI / $(2L^2)$\")\n",
+    "plt.xlabel(r\"$\\beta$\")\n",
+    "\n",
+    "plt.ylim(0.0,0.8)\n",
+    "plt.legend(loc=\"upper left\")\n",
+    "plt.savefig(\"MI3d.pdf\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gamma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "rcParams['text.usetex']     = True\n",
+    "\n",
+    "def numerical_der(x, y, n=2):\n",
+    "    l=len(x)\n",
+    "    ders = np.zeros(l)\n",
+    "    xmean = 1./(2*n+1) * np.array([sum(x[i-n:i+n+1]) for i in range(n,l-n)])\n",
+    "    ymean = 1./(2*n+1) * np.array([sum(y[i-n:i+n+1]) for i in range(n,l-n)])\n",
+    "\n",
+    "    for i,xm,ym in zip(range(n, l-n),xmean,ymean):\n",
+    "        ders[i] = np.dot((x[i-n:i+n+1]-xm),(y[i-n:i+n+1]-ym)) / sum((x[i-n:i+n+1]-xm)**2)\n",
+    "    \n",
+    "    return ders\n",
+    "    \n",
+    "Lver=[12,13,16,20]\n",
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
-    "    \n",
+    "    #plt.plot(beta,numerical_der(beta,gamma,5))\n",
+    "        \n",
     "#plt.axvline(0.76141)\n",
     "#plt.axvline(0.76141/2)\n",
     "\n",
@@ -59,7 +87,7 @@
     "\n",
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "plt.savefig(\"Gamma3d.pdf\")\n",
+    "#plt.savefig(\"Gamma3d.pdf\")\n",
     "plt.show()\n"
    ]
   }
