--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -1,8 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# Mutual Information"
    ]
@@ -48,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -70,11 +74,15 @@
     "    \n",
     "    return ders\n",
     "    \n",
-    "Lver=[12,13,16,20]\n",
+    "Lver=[12,16,20]\n",
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "    #plt.plot(beta,numerical_der(beta,gamma,5))\n",
+    "\n",
+    "l=21\n",
+    "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
+    "plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "        \n",
     "#plt.axvline(0.76141)\n",
     "#plt.axvline(0.76141/2)\n",
