--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -74,13 +74,13 @@
     "    \n",
     "    return ders\n",
     "    \n",
-    "Lver=[12,16,20]\n",
+    "Lver=[12,16,20,24]\n",
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
-    "    #plt.plot(beta,numerical_der(beta,gamma,5))\n",
+    "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
-    "l=21\n",
+    "l=13\n",
     "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "        \n",
@@ -98,6 +98,15 @@
     "#plt.savefig(\"Gamma3d.pdf\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
