added NofD to save-load

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -74,15 +74,15 @@
     "    \n",
     "    return ders\n",
     "    \n",
-    "Lver=[12,16,20,24]\n",
+    "Lver=[12,16,20]\n",
     "for l in Lver:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
-    "l=13\n",
+    "l=24\n",
     "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "plt.errorbar(beta,gamma-0.09,gamma_err,label=\"L = \"+str(l))\n",
     "        \n",
     "#plt.axvline(0.76141)\n",
     "#plt.axvline(0.76141/2)\n",
