started implementing switching

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -47,7 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gamma"
+    "# Gamma\n",
+    "## Charge excitations (vertices)"
    ]
   },
   {
@@ -100,13 +101,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Flux excitations (plaquettes)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "rcParams['text.usetex']     = True\n",
+    "\n",
+    "def numerical_der(x, y, n=2):\n",
+    "    l=len(x)\n",
+    "    ders = np.zeros(l)\n",
+    "    xmean = 1./(2*n+1) * np.array([sum(x[i-n:i+n+1]) for i in range(n,l-n)])\n",
+    "    ymean = 1./(2*n+1) * np.array([sum(y[i-n:i+n+1]) for i in range(n,l-n)])\n",
+    "\n",
+    "    for i,xm,ym in zip(range(n, l-n),xmean,ymean):\n",
+    "        ders[i] = np.dot((x[i-n:i+n+1]-xm),(y[i-n:i+n+1]-ym)) / sum((x[i-n:i+n+1]-xm)**2)\n",
+    "    \n",
+    "    return ders\n",
+    "    \n",
+    "L=[8]\n",
+    "for l in L:\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"pla.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
+    "\n",
+    "l=24\n",
+    "#beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
+    "#plt.errorbar(beta,gamma-0.09,gamma_err,label=\"L = \"+str(l))\n",
+    "        \n",
+    "plt.axvline(0.76141)\n",
+    "plt.axvline(0.76141/2)\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "plt.axhline(np.log(2),color=\"red\")\n",
+    "\n",
+    "plt.xlabel(r\"$\\beta$\")\n",
+    "plt.ylabel(r\"$\\gamma$\")\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper left\")\n",
+    "#plt.savefig(\"Gamma3d_plaquettes.pdf\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
