vertex metropolis algorithm

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
     "\n",
     "l=9\n",
     "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "plt.errorbar(beta,gamma-0.19,gamma_err,label=\"L = \"+str(l))\n",
+    "#plt.errorbar(beta,gamma-0.19,gamma_err,label=\"L = \"+str(l))\n",
     "        \n",
     "#plt.axvline(0.76141)\n",
     "#plt.axvline(0.76141/2)\n",
@@ -96,7 +96,7 @@
     "\n",
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "#plt.savefig(\"Gamma3d.pdf\")\n",
+    "#plt.savefig(\"Gamma3d_vertices.pdf\")\n",
     "plt.show()\n"
    ]
   },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -155,6 +155,49 @@
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
     "#plt.savefig(\"Gamma3d_plaquettes.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plaquette Groundstate in magnetic field"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "rcParams['text.usetex']     = True\n",
+    "\n",
+    "    \n",
+    "L=[8,9,12]\n",
+    "for l in L:\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"magn.dat\",unpack=True)\n",
+    "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
+    "\n",
+    "    \n",
+    "plt.axvline(0.221)\n",
+    "plt.axvline(0.221/2)\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "plt.axhline(np.log(2),color=\"red\")\n",
+    "\n",
+    "plt.xlabel(r\"loop tension~~~$h$\")\n",
+    "plt.ylabel(r\"$\\gamma$\")\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper left\")\n",
+    "#plt.savefig(\"Gamma3d_magn.pdf\")\n",
     "plt.show()"
    ]
   }
