--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -14,10 +14,10 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8]\n",
+    "L=[8,12]\n",
     "for l in L:\n",
-    "    beta,cv=np.loadtxt(\"SpecHeatL\"+str(l)+\"pla.dat\",unpack=True)\n",
-    "    plt.plot(beta,cv,label=r\"L=\"+str(l))\n",
+    "    beta,cv,err=np.loadtxt(\"SpecHeatL\"+str(l)+\"pla.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv*(2*l**3),err,label=r\"L=\"+str(l))\n",
     "\n",
     "        \n",
     "plt.axvline(0.76141)\n",
