--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -1,19 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "# Mutual Information"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vertices"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +44,49 @@
     "\n",
     "plt.ylim(0.0,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "plt.savefig(\"MI3d.pdf\")\n",
+    "plt.savefig(\"MI3d_vertices.pdf\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plaquettes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "\n",
+    "rcParams['text.usetex']     = True\n",
+    "\n",
+    "L=[8,12,16]\n",
+    "\n",
+    "for l in L:\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"MI3D\"+str(l)+\"pla.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma/(2*l**2),gamma_err/(2*l**2),label=\"L = \"+str(l))\n",
+    "    \n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "plt.axhline(np.log(2),color=\"red\")\n",
+    "\n",
+    "plt.axvline(0.221654)\n",
+    "plt.axvline(0.221654/2)\n",
+    "\n",
+    "plt.ylabel(r\"MI / $(2L^2)$\")\n",
+    "plt.xlabel(r\"$\\beta$\")\n",
+    "\n",
+    "plt.ylim(0.0,0.8)\n",
+    "plt.legend(loc=\"upper left\")\n",
+    "plt.savefig(\"MI3d_plaquettes.pdf\")\n",
     "plt.show()\n"
    ]
   },
@@ -53,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -111,9 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -139,9 +186,9 @@
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
-    "l=24\n",
-    "#beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "#plt.errorbar(beta,gamma-0.09,gamma_err,label=\"L = \"+str(l))\n",
+    "l=8\n",
+    "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"plaswi.dat\",unpack=True)\n",
+    "plt.errorbar(beta,gamma,gamma_err,fmt='.',label=\"L = \"+str(l)+\", switcher\")\n",
     "        \n",
     "plt.axvline(0.76141)\n",
     "plt.axvline(0.76141/2)\n",
@@ -167,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -179,15 +226,15 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8,9,12]\n",
+    "L=[8,9,12,13]\n",
     "for l in L:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"magn.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
     "    \n",
-    "plt.axvline(0.221)\n",
-    "plt.axvline(0.221/2)\n",
+    "plt.axvline(0.221654)\n",
+    "plt.axvline(0.221654/2)\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
