--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "plt.ylim(0.0,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "plt.savefig(\"MI3d_vertices.pdf\")\n",
+    "#plt.savefig(\"MI3d_vertices.pdf\")\n",
     "plt.show()\n"
    ]
   },
@@ -52,12 +52,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plaquettes "
+    "## Plaquettes with magnetic field"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -72,8 +72,8 @@
     "L=[8,12,16]\n",
     "\n",
     "for l in L:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"MI3D\"+str(l)+\"pla.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma/(2*l**2),gamma_err/(2*l**2),label=\"L = \"+str(l))\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"MI3D\"+str(l)+\"magn.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma/(2*l**2)+np.log(2),gamma_err/(2*l**2),label=\"L = \"+str(l))\n",
     "    \n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
@@ -82,11 +82,11 @@
     "plt.axvline(0.221654/2)\n",
     "\n",
     "plt.ylabel(r\"MI / $(2L^2)$\")\n",
-    "plt.xlabel(r\"$\\beta$\")\n",
+    "plt.xlabel(r\"$h$\")\n",
     "\n",
-    "plt.ylim(0.0,0.8)\n",
+    "#plt.ylim(0.0,0.8)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "plt.savefig(\"MI3d_plaquettes.pdf\")\n",
+    "plt.savefig(\"MI3d_plaquettes_magn.pdf\")\n",
     "plt.show()\n"
    ]
   },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +180,7 @@
     "    \n",
     "    return ders\n",
     "    \n",
-    "L=[8,12,16,20,24]\n",
+    "L=[8,12,16]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"pla.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
@@ -199,9 +199,9 @@
     "plt.xlabel(r\"$\\beta$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
     "\n",
-    "#plt.xlim(0.3,0.8)\n",
+    "plt.xlim(0.19,0.81)\n",
     "plt.legend(loc=\"upper left\")\n",
-    "#plt.savefig(\"Gamma3d_plaquettes.pdf\")\n",
+    "plt.savefig(\"Gamma3d_plaquettes.pdf\")\n",
     "plt.show()"
    ]
   },
