--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -57,9 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -67,7 +67,26 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
     "\n",
+    "######### Plotting parameters: #########\n",
+    "fig_width_pt = 246.0  # Get this from LaTeX using \\showthe\\columnwidth\n",
+    "inches_per_pt = 1.0/72.27               # Convert pt to inch\n",
+    "golden_mean = (np.sqrt(5)-1.0)/2.0         # Aesthetic ratio\n",
+    "fig_width = fig_width_pt*inches_per_pt  # width in inches\n",
+    "#fig_height = fig_width*golden_mean      # height in inches\n",
+    "fig_height = fig_width*0.75      # height in inches\n",
+    "fig_size =  [fig_width,fig_height]\n",
+    "\n",
+    "rcParams['axes.labelsize']  = 10\n",
+    "rcParams['figure.figsize']  = fig_size\n",
+    "rcParams['font.family']     = 'serif'\n",
+    "rcParams['font.serif']      = ['Computer Modern']\n",
+    "rcParams['font.size']       = 10\n",
+    "#rcParams['text.fontsize']   = 10 ##text.fontsize is deprecated and replaced with font.size\n",
     "rcParams['text.usetex']     = True\n",
+    "rcParams['legend.fontsize'] = 8\n",
+    "rcParams['xtick.labelsize'] = 8\n",
+    "rcParams['ytick.labelsize'] = 8\n",
+    "\n",
     "\n",
     "L=[8,12,16]\n",
     "\n",
@@ -83,9 +102,11 @@
     "\n",
     "plt.ylabel(r\"MI / $(2L^2)$\")\n",
     "plt.xlabel(r\"$h$\")\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "\n",
     "\n",
     "#plt.ylim(0.0,0.8)\n",
-    "plt.legend(loc=\"upper left\")\n",
+    "plt.legend(loc=\"lower left\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"MI3d_plaquettes_magn.pdf\")\n",
     "plt.show()\n"
    ]
@@ -100,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +130,26 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
+    "\n",
+    "######### Plotting parameters: #########\n",
+    "fig_width_pt = 246.0  # Get this from LaTeX using \\showthe\\columnwidth\n",
+    "inches_per_pt = 1.0/72.27               # Convert pt to inch\n",
+    "golden_mean = (np.sqrt(5)-1.0)/2.0         # Aesthetic ratio\n",
+    "fig_width = fig_width_pt*inches_per_pt  # width in inches\n",
+    "#fig_height = fig_width*golden_mean      # height in inches\n",
+    "fig_height = fig_width*0.75      # height in inches\n",
+    "fig_size =  [fig_width,fig_height]\n",
+    "\n",
+    "rcParams['axes.labelsize']  = 10\n",
+    "rcParams['figure.figsize']  = fig_size\n",
+    "rcParams['font.family']     = 'serif'\n",
+    "rcParams['font.serif']      = ['Computer Modern']\n",
+    "rcParams['font.size']       = 10\n",
+    "#rcParams['text.fontsize']   = 10 ##text.fontsize is deprecated and replaced with font.size\n",
     "rcParams['text.usetex']     = True\n",
+    "rcParams['legend.fontsize'] = 8\n",
+    "rcParams['xtick.labelsize'] = 8\n",
+    "rcParams['ytick.labelsize'] = 8\n",
     "\n",
     "def numerical_der(x, y, n=2):\n",
     "    l=len(x)\n",
@@ -129,7 +169,7 @@
     "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
     "l=9\n",
-    "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
+    "#beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "#plt.errorbar(beta,gamma-0.19,gamma_err,label=\"L = \"+str(l))\n",
     "        \n",
     "#plt.axvline(0.76141)\n",
@@ -141,9 +181,12 @@
     "plt.xlabel(r\"$\\beta$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
     "\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "\n",
+    "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"upper left\")\n",
-    "#plt.savefig(\"Gamma3d_vertices.pdf\")\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"Gamma3d_vertices.pdf\")\n",
     "plt.show()\n"
    ]
   },
@@ -214,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
