--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
-    "rcParams['text.usetex']     = True\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
     "L=[8,12]\n",
@@ -27,11 +29,23 @@
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
     "plt.ylabel(r\"specific heat~~~$C_V$\")\n",
     "\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"upper left\")\n",
-    "#plt.savefig(\"SpecHeatPlaquettes.pdf\")\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"SpecHeatPlaquettes.pdf\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
