--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -130,26 +130,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
     "\n",
-    "######### Plotting parameters: #########\n",
-    "fig_width_pt = 246.0  # Get this from LaTeX using \\showthe\\columnwidth\n",
-    "inches_per_pt = 1.0/72.27               # Convert pt to inch\n",
-    "golden_mean = (np.sqrt(5)-1.0)/2.0         # Aesthetic ratio\n",
-    "fig_width = fig_width_pt*inches_per_pt  # width in inches\n",
-    "#fig_height = fig_width*golden_mean      # height in inches\n",
-    "fig_height = fig_width*0.75      # height in inches\n",
-    "fig_size =  [fig_width,fig_height]\n",
-    "\n",
-    "rcParams['axes.labelsize']  = 10\n",
-    "rcParams['figure.figsize']  = fig_size\n",
-    "rcParams['font.family']     = 'serif'\n",
-    "rcParams['font.serif']      = ['Computer Modern']\n",
-    "rcParams['font.size']       = 10\n",
-    "#rcParams['text.fontsize']   = 10 ##text.fontsize is deprecated and replaced with font.size\n",
-    "rcParams['text.usetex']     = True\n",
-    "rcParams['legend.fontsize'] = 8\n",
-    "rcParams['xtick.labelsize'] = 8\n",
-    "rcParams['ytick.labelsize'] = 8\n",
+    "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "def numerical_der(x, y, n=2):\n",
     "    l=len(x)\n",
@@ -192,6 +175,97 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Charge excitations (vertices) -- 1st derivative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.948044931789 -0.00629622401179\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "from mpl_toolkits.axes_grid.inset_locator import inset_axes\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "def numerical_der(x, y, n=2):\n",
+    "    l=len(x)\n",
+    "    ders = np.zeros(l)\n",
+    "    xmean = 1./(2*n+1) * np.array([sum(x[i-n:i+n+1]) for i in range(n,l-n)])\n",
+    "    ymean = 1./(2*n+1) * np.array([sum(y[i-n:i+n+1]) for i in range(n,l-n)])\n",
+    "\n",
+    "    for i,xm,ym in zip(range(n, l-n),xmean,ymean):\n",
+    "        ders[i] = np.dot((x[i-n:i+n+1]-xm),(y[i-n:i+n+1]-ym)) / sum((x[i-n:i+n+1]-xm)**2)\n",
+    "    \n",
+    "    return ders\n",
+    "    \n",
+    "Lver=np.array([8,12,16,20,24])\n",
+    "T_cross=[]\n",
+    "for l in Lver:\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
+    "    #plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "    derivative=numerical_der(beta,gamma,15)\n",
+    "    plt.plot(beta,derivative,label=\"L = \"+str(l))\n",
+    "    T_cross.append(1./beta[np.argmax(derivative)])\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "#plt.axhline(np.log(2),color=\"red\")\n",
+    "\n",
+    "plt.xlabel(r\"$\\beta$\")\n",
+    "plt.ylabel(r\"$d \\gamma / d \\beta$\")\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.ylim(0.0,1.0)\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "\n",
+    "ax=plt.gca()\n",
+    "axins = inset_axes(ax, width=\"35%\", height=\"30%\", loc=1)\n",
+    "\n",
+    "axins.plot(1./np.log(Lver),T_cross,'.-')\n",
+    "a, b = np.polyfit(1./np.log(Lver),T_cross,1)\n",
+    "xrrange=np.array([-0.04,0.5])\n",
+    "axins.plot(xrrange,a*xrrange+b,'-')\n",
+    "\n",
+    "print a,b\n",
+    "\n",
+    "axins.set_xlim(-0.05,0.5)\n",
+    "axins.set_ylim(-0.05,0.46)\n",
+    "axins.axhline(0.0,color=\"gray\")\n",
+    "axins.axvline(0.0,color=\"gray\")\n",
+    "\n",
+    "axins.set_xlabel(r\"$ 1 / \\ln L$\")\n",
+    "axins.set_ylabel(r\"$T_\\text{cross}$\")\n",
+    "\n",
+    "axins.set_xticks([0.0,0.2,0.4])\n",
+    "\n",
+    "\n",
+    "\n",
+    "plt.savefig(\"Gamma3d_vertices_derivative.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +284,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams\n",
-    "rcParams['text.usetex']     = True\n",
+    "\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "def numerical_der(x, y, n=2):\n",
     "    l=len(x)\n",
@@ -243,8 +320,61 @@
     "plt.ylabel(r\"$\\gamma$\")\n",
     "\n",
     "plt.xlim(0.19,0.81)\n",
-    "plt.legend(loc=\"upper left\")\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"Gamma3d_plaquettes.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flux excitations with tubes (plaquettes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "    \n",
+    "L=[8]\n",
+    "for l in L:\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l)+\" tubes\")\n",
+    "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
+    "\n",
+    "l=8\n",
+    "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"plalayers.dat\",unpack=True)\n",
+    "plt.errorbar(beta,gamma/l,gamma_err,fmt='-',label=\"L = \"+str(l)+\" layers\")\n",
+    "        \n",
+    "plt.axvline(0.76141)\n",
+    "plt.axvline(0.76141/2)\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "plt.axhline(np.log(2),color=\"red\")\n",
+    "\n",
+    "plt.xlabel(r\"$\\beta$\")\n",
+    "plt.ylabel(r\"$\\gamma$\")\n",
+    "\n",
+    "#plt.xlim(0.19,0.81)\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"Gamma3d_plaquettes_tube.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -269,7 +399,7 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8,9,12,13]\n",
+    "L=[8,12]\n",
     "for l in L:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"magn.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
