--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plaquette Hamiltonian"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +25,7 @@
     "    \n",
     "L=[8,12]\n",
     "for l in L:\n",
-    "    beta,cv,err=np.loadtxt(\"SpecHeatL\"+str(l)+\"pla.dat\",unpack=True)\n",
+    "    beta,cv,err=np.loadtxt(\"plaquettes/SpecHeatL\"+str(l)+\"pla.dat\",unpack=True)\n",
     "    plt.errorbar(beta,cv*(2*l**3),err,label=r\"L=\"+str(l))\n",
     "\n",
     "        \n",
@@ -39,13 +46,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vertex Hamiltonian"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "    \n",
+    "L=[8]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv*(2*l**3),err,label=r\"L=\"+str(l))\n",
+    "\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "\n",
+    "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
+    "plt.ylabel(r\"specific heat~~~$C_V$\")\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"SpecHeatVertices.pdf\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
