--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
     "L=[12,16]\n",
     "\n",
     "for l in L:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"MI3D\"+str(l)+\"ver.dat\",unpack=True)\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"vertices/MI3D\"+str(l)+\"ver.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma/(2*l**2),gamma_err/(2*l**2),label=\"L = \"+str(l))\n",
     "    \n",
     "plt.axhline(0.0,color=\"black\")\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -129,6 +129,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.axes_grid.inset_locator import inset_axes\n",
     "from matplotlib import rcParams\n",
     "import prepare_plotting as pp\n",
     "\n",
@@ -146,29 +147,49 @@
     "    return ders\n",
     "    \n",
     "Lver=[8,12,16,20,24]\n",
-    "for l in Lver:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
-    "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
-    "\n",
-    "l=9\n",
-    "#beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "#plt.errorbar(beta,gamma-0.19,gamma_err,label=\"L = \"+str(l))\n",
-    "        \n",
-    "#plt.axvline(0.76141)\n",
-    "#plt.axvline(0.76141/2)\n",
+    "ccycle=['b','g','r','c','m']\n",
+    "T_cross=[]\n",
+    "for c,l in enumerate(Lver):\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"vertices/LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
+    "    plt.errorbar(beta[::5],gamma[::5],gamma_err[::5],fmt='-',color=ccycle[c],label=\"L = \"+str(l))\n",
+    "    plt.plot(beta,gamma,'-',color=ccycle[c])\n",
+    "    derivative=numerical_der(beta,gamma,15)\n",
+    "    T_cross.append(1./beta[np.argmax(derivative)])\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
     "\n",
-    "plt.xlabel(r\"$\\beta$\")\n",
-    "plt.ylabel(r\"$\\gamma$\")\n",
+    "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
+    "plt.ylabel(r\"topological entropy~~~$\\gamma$\")\n",
+    "plt.ylim(-0.1,0.9)\n",
+    "plt.xlim(0.0,5.7)\n",
+    "plt.legend(loc=\"center\",frameon=False,numpoints=1,bbox_to_anchor=[0.83,0.32])\n",
     "\n",
-    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "\n",
+    "ax=plt.gca()\n",
+    "axins = inset_axes(ax, width=0.77, height=0.6, loc=2, bbox_transform=ax.figure.transFigure, \n",
+    "                   bbox_to_anchor=[0.235,0.9])\n",
+    "\n",
+    "axins.plot(1./np.log(Lver),T_cross,'.-')\n",
+    "a, b = np.polyfit(1./np.log(Lver),T_cross,1)\n",
+    "xrrange=np.array([-0.04,0.5])\n",
+    "axins.plot(xrrange,a*xrrange+b,'-')\n",
+    "\n",
+    "axins.set_xlim(-0.05,0.5)\n",
+    "axins.set_ylim(-0.05,0.46)\n",
+    "axins.axhline(0.0,color=\"gray\")\n",
+    "axins.axvline(0.0,color=\"gray\")\n",
+    "\n",
+    "axins.set_xlabel(r\"$ 1 / \\ln L$\")\n",
+    "axins.set_ylabel(r\"$T_\\text{cross}$\")\n",
+    "\n",
+    "axins.set_xticks([0.0,0.2,0.4])\n",
+    "axins.set_yticks([0.0,0.2,0.4])\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.14,left=0.12)\n",
     "\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"Gamma3d_vertices.pdf\")\n",
     "plt.show()\n"
    ]
@@ -245,8 +266,6 @@
     "a, b = np.polyfit(1./np.log(Lver),T_cross,1)\n",
     "xrrange=np.array([-0.04,0.5])\n",
     "axins.plot(xrrange,a*xrrange+b,'-')\n",
-    "\n",
-    "print a,b\n",
     "\n",
     "axins.set_xlim(-0.05,0.5)\n",
     "axins.set_ylim(-0.05,0.46)\n",
@@ -387,9 +406,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -401,7 +420,7 @@
     "    \n",
     "L=[8,12]\n",
     "for l in L:\n",
-    "    magn,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"magn.dat\",unpack=True)\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magn.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
