added python collection for evaluation

--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -73,6 +73,10 @@
     "    beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL\"+str(l)+\".dat\",unpack=True)\n",
     "    plt.errorbar(beta,cv*(2*l**3),err,label=r\"L=\"+str(l))\n",
     "\n",
+    "L=[9]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),label=r\"L=\"+str(l))\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "\n",
