--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -91,8 +91,9 @@
     "L=[8,12,16]\n",
     "\n",
     "for l in L:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"MI3D\"+str(l)+\"magn.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma/(2*l**2)+np.log(2),gamma_err/(2*l**2),label=\"L = \"+str(l))\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/MI3D\"+str(l)+\"magn.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma/(2*(l**2)-1)+np.log(2),gamma_err/(2*l**2-1),label=\"L = \"+str(l))\n",
+    "    \n",
     "    \n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
@@ -100,13 +101,13 @@
     "plt.axvline(0.221654)\n",
     "plt.axvline(0.221654/2)\n",
     "\n",
-    "plt.ylabel(r\"MI / $(2L^2)$\")\n",
-    "plt.xlabel(r\"$h$\")\n",
-    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.ylabel(r\"mutual information~~~$I_2 / (2L^2 - 1)$\")\n",
+    "plt.xlabel(r\"loop tension~~~$h$\")\n",
+    "plt.gcf().subplots_adjust(bottom=0.135,left=0.155)\n",
     "\n",
-    "\n",
+    "plt.xlim(0.0,0.6)\n",
     "#plt.ylim(0.0,0.8)\n",
-    "plt.legend(loc=\"lower left\",frameon=False,numpoints=1)\n",
+    "plt.legend(loc=\"center right\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"MI3d_plaquettes_magn.pdf\")\n",
     "plt.show()\n"
    ]
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -151,8 +152,7 @@
     "T_cross=[]\n",
     "for c,l in enumerate(Lver):\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"vertices/LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "    plt.errorbar(beta[::5],gamma[::5],gamma_err[::5],fmt='-',color=ccycle[c],label=\"L = \"+str(l))\n",
-    "    plt.plot(beta,gamma,'-',color=ccycle[c])\n",
+    "    plt.errorbar(beta,gamma,gamma_err,errorevery=5,fmt='-',color=ccycle[c],label=\"L = \"+str(l))\n",
     "    derivative=numerical_der(beta,gamma,15)\n",
     "    T_cross.append(1./beta[np.argmax(derivative)])\n",
     "\n",
