--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -67,27 +67,24 @@
     "\n",
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
-    "    \n",
     "L=[8]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL\"+str(l)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(beta,cv*(2*l**3),err,label=r\"L=\"+str(l))\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=3,label=r\"L=\"+str(l))\n",
     "\n",
-    "L=[9]\n",
-    "for l in L:\n",
-    "    beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL\"+str(l)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),label=r\"L=\"+str(l))\n",
+    "#beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL9.dat\",unpack=True)\n",
+    "#plt.errorbar(beta,cv/(3*8**3),err/(3*8**3),label=r\"L=\"+str(l))\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "\n",
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
-    "plt.ylabel(r\"specific heat~~~$C_V$\")\n",
+    "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
     "\n",
-    "plt.gcf().subplots_adjust(bottom=0.155)\n",
-    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "plt.gcf().subplots_adjust(bottom=0.14)\n",
+    "plt.gcf().subplots_adjust(left=0.145)\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"SpecHeatVertices.pdf\")\n",
     "plt.show()"
    ]
