--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -67,13 +67,17 @@
     "\n",
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
-    "L=[8]\n",
+    "L=[8,12,16,20]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL\"+str(l)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=3,label=r\"L=\"+str(l))\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=5,label=r\"L=\"+str(l))\n",
     "\n",
-    "#beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL9.dat\",unpack=True)\n",
-    "#plt.errorbar(beta,cv/(3*8**3),err/(3*8**3),label=r\"L=\"+str(l))\n",
+    "l=24\n",
+    "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL\"+str(l+1)+\".dat\",unpack=True)\n",
+    "#plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=3,label=r\"L=\"+str(l))\n",
+    "    \n",
+    "#beta,ener,enererr=np.loadtxt(\"vertices/EnergyL8.dat\",unpack=True)\n",
+    "#plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),label=r\"Energy L=\"+str(8))\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "\n",
