--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -370,15 +370,16 @@
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
-    "L=[8]\n",
+    "L=[8,12]\n",
     "for l in L:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l)+\" tubes\")\n",
-    "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
+    "    #plt.plot(beta,numerical_der(beta,gamma,10))L\n",
     "\n",
-    "l=8\n",
-    "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"plalayers.dat\",unpack=True)\n",
-    "plt.errorbar(beta,gamma/l,gamma_err,fmt='-',label=\"L = \"+str(l)+\" layers\")\n",
+    "L=[8,12]\n",
+    "for l in L:\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"plalayers.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma/l,gamma_err,fmt='-',label=r\"L = \"+str(l)+\" layers, $\\gamma / L$\")\n",
     "        \n",
     "plt.axvline(0.76141)\n",
     "plt.axvline(0.76141/2)\n",
