--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -419,9 +419,9 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8,12]\n",
+    "L=[8]\n",
     "for l in L:\n",
-    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magn.dat\",unpack=True)\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
