--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -25,8 +25,8 @@
     "    \n",
     "L=[8,12]\n",
     "for l in L:\n",
-    "    beta,cv,err=np.loadtxt(\"plaquettes/SpecHeatL\"+str(l)+\"pla.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,cv*(2*l**3),err,label=r\"L=\"+str(l))\n",
+    "    beta,cv,err=np.loadtxt(\"plaquettes/SpecHeatplaL\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),label=r\"L=\"+str(l))\n",
     "\n",
     "        \n",
     "plt.axvline(0.76141)\n",
