--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -92,6 +92,60 @@
     "plt.savefig(\"SpecHeatVertices.pdf\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Magnetic Susceptibility Plaquette Hamiltonian "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "    \n",
+    "L=[12]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"plaquettes_with_field/MagnSuscL\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv,err,label=r\"L=\"+str(l))\n",
+    "\n",
+    "        \n",
+    "plt.axvline(0.221654)\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "\n",
+    "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
+    "plt.ylabel(r\"magnetic susceptiblity~~~$\\chi_m$\")\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"MagnSuscPlaquettesField.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
