--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -423,7 +423,11 @@
     "for l in L:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
-    "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
+    "\n",
+    "L=[9]\n",
+    "for l in L:\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
+    "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "\n",
     "    \n",
     "plt.axvline(0.221654)\n",
